# xqserial_server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
document/: 开发总结
include/: AsyncSerial.h  DiffDriverController.h  StatusPublisher.h
launch/: fake.launch  new_imu.launch  new_imu2.launch  tf.launch  xqserial.launch
msg/: Target.msg
script/: visualization.py
scripts/: visualization.py
src/: AsyncSerial.cpp  AsyncSerial.h  DiffDriverController.cpp  DiffDriverController.h  StatusPublisher.cpp  StatusPublisher.h  crc16.cpp  crc16.h  main.cpp  new_imu_odom.cpp
src/xqserial_server/: fake_node.py
srv/: Shutdown.srv
udev规则设置/: fixudev
udev规则设置/etc/: 95-persistent-serial.rules  96-persistent-serial.rules
