<?xml version="1.0"?>
<package>
  <name>xqserial_server</name>
  <version>1.0.1</version>
  <description>The xqserial_server package</description>
  <maintainer email="frank@gmail.com">frank</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libjsoncpp</build_depend>
  <build_depend>galileo_serial_server</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>libjsoncpp</run_depend>
  <run_depend>galileo_serial_server</run_depend>
  <run_depend>eigen</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
